@@ -1,30 +1,30 @@
 {
     "STATUSBAR": {
-      "CLUSTER": "Cluster",
-      "VERSION": "Version",
-      "SNAPSHOT": "SNAPSHOT",
-      "NODES": "Knoten",
-      "HEALTH": "Status",
-      "DATA": "Daten",
-      "CHECKS": "Checks",
-      "CHECK": "Check",
-      "FAILED": "fehlgeschlagen",
-      "CLUSTER_OFFLINE": "Cluster ist nicht erreichbar",
-      "HELP": "Hilfe",
-      "CRATE_MANUAL": "CrateDB Handbuch",
-      "DOC_MSG": "Online Dokumentation lesen",
-      "NOTIFICATIONS": "Benachrichtigungen",
-      "OLD_VERSION_TIP": "Du verwendest eine alte Version ({{ version }}) von CrateDB",
-      "UPDATE_TIP": "Bitte aktualisiere CrateDB auf die Version {{ version }}!",
-      "NO_NOTIFICATION": "Keine Benachrichtigungen.",
-      "MARK_ALL_READ": "Als gelesen markieren"
+        "CLUSTER": "Cluster",
+        "VERSION": "Version",
+        "SNAPSHOT": "SNAPSHOT",
+        "NODES": "Knoten",
+        "HEALTH": "Status",
+        "DATA": "Daten",
+        "CHECKS": "Checks",
+        "CHECK": "Check",
+        "FAILED": "fehlgeschlagen",
+        "CLUSTER_OFFLINE": "Cluster ist nicht erreichbar",
+        "HELP": "Hilfe",
+        "CRATE_MANUAL": "CrateDB Handbuch",
+        "DOC_MSG": "Online Dokumentation lesen",
+        "NOTIFICATIONS": "Benachrichtigungen",
+        "OLD_VERSION_TIP": "Du verwendest eine alte Version ({{ version }}) von CrateDB",
+        "UPDATE_TIP": "Bitte aktualisiere CrateDB auf die Version {{ version }}!",
+        "NO_NOTIFICATION": "Keine Benachrichtigungen.",
+        "MARK_ALL_READ": "Als gelesen markieren"
     },
     "NAVIGATION": {
-      "OVERVIEW": "Übersicht",
-      "CONSOLE": "Konsole",
-      "TABLE": "Tabellen",
-      "VIEW": "Views",
-      "CLUSTER": "Cluster"
+        "OVERVIEW": "Übersicht",
+        "CONSOLE": "Konsole",
+        "TABLE": "Tabellen",
+        "VIEW": "Views",
+        "CLUSTER": "Cluster"
     },
     "OVERVIEW": {
         "HEALTH": "Status",
@@ -56,7 +56,7 @@
         "SHOW_ERROR_TRACE_HINT": "Wähle `Stacktrace anzeigen` in den Konsoleoptionen um die gesamte Fehlermeldung anzuzeigen.",
         "ERROR": "Fehler!",
         "RESULT_FROM_QUERY": "Ergebnis",
-        "ERROR_TRACE":"STACKTRACE",
+        "ERROR_TRACE": "STACKTRACE",
         "FORMAT_RESULTS": "Ergebnisse formatieren",
         "UNSAFE_INTEGER": "This number exceeds the JavaScript max safe integer. To be sure to have the right number cast it in your SQL query to string using 'field::string'."
     },
